--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.0",
+    "moment": "^2.30.1",
+    "mongoose": "^8.5.1",
     "mongoose-sequence": "^6.0.1",
     "uuid": "^9.0.1"
   }
